--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Beatmapping</title>
     <style>
         @font-face {
-            font-family: "Ubuntu M";
+            font-family: "Ubuntu-M";
             src: url("./fonts/ubuntu-font-family-0.83/Ubuntu-M.ttf");
         }
         body {
@@ -17,7 +17,7 @@
             position: absolute;
             margin: 0;
             overscroll-behavior: contain;
-            font-family: "Ubuntu M";
+            font-family: "Ubuntu-M";
         }
 
         #game_canvas {
